Caricamento versione 3 Oasis

--- a/1-city_description.html
+++ b/1-city_description.html
@@ -25,12 +25,7 @@
   </head>
   <body>
     <header
-      class="
-        navbar navbar-expand-lg navbar-dark
-        bg-transparent
-        fixed-top
-        link-white
-      "
+      class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top link-white"
     >
       <div class="container-fluid">
         <!-- Logo -->
@@ -81,7 +76,9 @@
                 >
                 <ul class="dropdown-menu px-3">
                   <li>
-                    <a href="2-services_descriptions.html" class="dropdown-item">Generale</a>
+                    <a href="2-services_descriptions.html" class="dropdown-item"
+                      >Generale</a
+                    >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
@@ -90,7 +87,9 @@
                     >
                   </li>
                   <li>
-                    <a href="2_1-service_description.html" class="dropdown-item">Benessere</a>
+                    <a href="2_1-service_description.html" class="dropdown-item"
+                      >Benessere</a
+                    >
                   </li>
                 </ul>
               </li>
@@ -113,10 +112,7 @@
       >
         <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
           <h1>Descrizione</h1>
-          <h2 class="lead">
-            Scopri la città dove i tuoi figli cresceranno e faranno parte
-            dell’Elite che ripopolerà il Pianeta Terra
-          </h2>
+          <h2 class="lead">Trova il quartiere più adatto a te</h2>
         </div>
       </section>
 
@@ -124,16 +120,11 @@
         <div class="container py-5">
           <h2 class="text-center mb-5">I quartieri</h2>
           <div
-            class="
-              row
-              gy-5 gy-md-0
-              gx-md-5
-              align-items-center
-              justify-content-between
-              pb-5
-            "
+            class="row gy-5 gy-md-0 gx-md-5 align-items-center justify-content-between pb-5"
           >
-            <div class="col-md col-lg-5 text-center">
+            <div
+              class="col-md col-lg-5 text-center hand-to-right position-relative"
+            >
               <img
                 class="img-fluid mb-3"
                 src="img/img_desc1.jpg"
@@ -141,31 +132,24 @@
               />
             </div>
             <div class="col-md col-lg-5">
-              <h3>Sorgensis</h3>
+              <h3>Rigenesis</h3>
               <p>
-                Sorgensis è dove tutto ha avuto inizio. Si trova nel mezzo del
-                deserto in prossimità della <strong>fonte</strong> che fornisce
-                acqua a tutta la città. Nel tempo sono state costruite le
-                strutture termali, dove ribilanciare il proprio
-                <strong>stato psicofisico</strong>. Qui a Sorgensis
-                preoccupazioni e pensieri negativi spariscono immediatamente. E’
-                qui che riappacifichiamo il tuo rapporto con la Natura.
+                Rigenesis è uno dei quartieri preferiti dai cittadini di Oasis.
+                Si trova nella parte periferica, in prossimità della fonte che
+                fornisce acqua a tutta la città. Nel tempo sono state costruite
+                le
+                <strong>strutture termali</strong> e
+                <strong>centri benessere</strong>, dove bilanciare il proprio
+                stato psificofisico e dove i pensieri negativi e del passato
+                spariscono immediatamente.
               </p>
             </div>
           </div>
 
           <div
-            class="
-              row
-              flex-md-row-reverse
-              gy-5 gy-md-0
-              gx-md-5
-              align-items-center
-              justify-content-between
-              pb-5
-            "
+            class="row flex-md-row-reverse gy-5 gy-md-0 gx-md-5 align-items-center justify-content-between pb-5"
           >
-            <div class="col-md col-lg-5 text-center">
+            <div class="col-md col-lg-5 text-center hand-to-left position-relative">
               <img
                 class="img-fluid mb-3"
                 src="img/img_desc2.jpg"
@@ -176,28 +160,22 @@
               <h3>Centrisis</h3>
               <p>
                 È il quartiere dove è collocata la
-                <strong>vita di Oasis</strong> e dei suoi cittadini. Case,
+                <strong>vita</strong> di Oasis e dei suoi cittadini. Case,
                 uffici, servizi essenziali, accademie, locali notturni. E’ qui
-                che giorno dopo giorno diamo vita alla città del futuro e
-                ritroverai il piacere di socializzare e lavorare. È stata
-                costruita in un punto lontano da Sorgensis per permettere di
-                tenere debitamente separati <strong>lavoro</strong> e relax. Ci
-                teniamo che non veniate tentati dal riposo mentre state
-                guadagnando soldi.
+                che giorno dopo giorno diamo vita alla
+                <strong>città del futuro</strong> e ritroverai il piacere di
+                socializzare e lavorare. È stata costruita in un punto lontano
+                da Sorgensis per permettere di tenere debitamente separati
+                lavoro e relax. Ci teniamo che non veniate tentati dal riposo
+                mentre state guadagnando soldi.
               </p>
             </div>
           </div>
 
           <div
-            class="
-              row
-              gy-5 gy-md-0
-              gx-md-5
-              align-items-center
-              justify-content-between
-            "
+            class="row gy-5 gy-md-0 gx-md-5 align-items-center justify-content-between"
           >
-            <div class="col-md col-lg-5 text-center">
+            <div class="col-md col-lg-5 text-center hand-to-right position-relative">
               <img
                 class="img-fluid mb-3"
                 src="img/img_desc3.jpg"
@@ -244,13 +222,7 @@
       </div>
       <!-- Links -->
       <nav
-        class="
-          nav
-          flex-column flex-md-row
-          align-items-center
-          justify-content-md-center
-          border-bottom border-primary
-        "
+        class="nav flex-column flex-md-row align-items-center justify-content-md-center border-bottom border-primary"
       >
         <a class="nav-link" href="index.html">Home</a>
         <a class="nav-link" href="./1-city_description.html">Descrizione</a>
