--- a/2-services_descriptions.html
+++ b/2-services_descriptions.html
@@ -117,8 +117,7 @@
         <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
           <h1>I servizi migliori</h1>
           <p class="lead">
-            Per farti dimenticare qualsiasi problema e renderti utile alla
-            nostra comunità
+            Scopri i servizi migliori, per allontanarti dalle paure del passato
           </p>
         </div>
       </section>
