--- a/2_2-service-description.html
+++ b/2_2-service-description.html
@@ -144,7 +144,7 @@
                 verrai sottoposto ad un
                 <strong>test di intelligenza</strong> seguito poi da un
                 <strong>colloquio motivazionale </strong>con i nostri
-                professionisti
+                professionisti, che sapranno indirizzati sul percorso migliore.
               </p>
             </div>
           </div>
@@ -156,10 +156,7 @@
           <div class="mb-5">
             <h2 class="text-center">Le scuole</h2>
             <p class="lead text-center">
-              I nostri pluriqualificati psicologi sapranno indicarti l’unica
-              direzione giusta per sfruttare le tue inclinazioni. Non dovrai
-              fare altro nella vita che assecondarle e noi ti daremo gli
-              strumenti giusti per farlo.
+              Gli psicologi sapranno poi indicarti l’unica direzione giusta per le tue inclinazioni.
             </p>
           </div>
 
@@ -182,8 +179,8 @@
                   necessarie a svolgere un lavoro pratico. Dal meccanico alla
                   parrucchiera, dal fabbro all’estetista: questa è la scuola che
                   fa per te. Inoltre ti insegneremo la difficile arte
-                  dell’<strong>ubbidienza</strong> e della
-                  <strong>disciplina</strong>.
+                  dell’ubbidienza e della
+                  disciplina.
                 </p>
               </div>
             </div>
@@ -200,7 +197,7 @@
                 <h3>Intellectus</h3>
                 <p>
                   Per te non esistono problemi, ma solo soluzioni? Non ti tiri
-                  indietro di fronte alla <strong>complessità</strong>, ma ti
+                  indietro di fronte alla complessità, ma ti
                   piace analizzarla in tutte le sue possibili sfaccettature? Ti
                   definisci una persona analitica, metodica e logica? Oasis ha
                   bisogno delle tue rarissime qualità per progredire verso il
@@ -214,7 +211,7 @@
         </div>
       </section>
 
-      <section class="bg-light-gray py-5">
+      <section class="bg-light-gray py-5 hand-faq">
         <div class="container p-5">
           <h2 class="text-center pb-4">FAQ</h2>
           <h3 class="pb-2">Posso cambiare?</h3>
