--- a/3-city_access.html
+++ b/3-city_access.html
@@ -118,8 +118,7 @@
           <h1 class="visually-hidden">Unisciti a noi</h1>
           <h2 class="h1">Ti senti cittadino di Oasis?</h2>
           <h3 class="lead">
-            Scopri gli step necessari per entrare a far parte dell'élite del
-            Nuovo Mondo
+            Scopri gli step per diventarlo
           </h3>
         </div>
       </section>
@@ -149,13 +148,13 @@
                   <h3 class="lead">Candidati</h3>
                   <p>
                     Compila il form in questa pagina. Nel messaggio specifica
-                    perché sei interessato a entrare in Oasis
+                    perché sei interessato a entrare in OASIS
                   </p>
                 </li>
                 <li>
                   <h3 class="lead">Conosciamoci</h3>
                   <p>
-                    Ti contatteremo per un breve colloquio online. Ti faremo
+                    Ti contatteremo per un breve <strong>colloquio online</strong>. Ti faremo
                     delle domande sulle tue aspirazioni e su come pensi di
                     contribuire a far crescere Oasis
                   </p>
@@ -164,15 +163,15 @@
                   <h3 class="lead">Raggiungici</h3>
                   <p>
                     Se sarai idoneo, riceverai le coordinate geografiche precise
-                    per raggiungerci. All’arrivo dovrai esibire il codice di
+                    per raggiungerci. All’arrivo dovrai esibire il <strong>codice</strong> di
                     accettazione.
                   </p>
                 </li>
                 <li>
                   <h3 class="lead">Vivi</h3>
                   <p>
-                    Goditi i servizi e vivi la vita dei quartieri partecipando
-                    agli eventi
+                    Finalmente fai parte della città più felice e pacifica del
+                    mondo. Cosa aspetti a viverla appieno imparando, lavorando, divertendoti e rilassandoti?
                   </p>
                 </li>
               </ul>
