--- a/4-free_page.html
+++ b/4-free_page.html
@@ -134,19 +134,19 @@
                   />
                   <div class="card-img-overlay px-0">
                     <h3 class="card-title bg-primary-alpha p-3">
-                      Sorgente di Vita
+                      Il parco divertimenti di Oasis
                     </h3>
                   </div>
                 </div>
                 <div class="card-body d-flex flex-column text-dark">
                   <p class="card-text flex-grow-1">
-                    Organizziamo visite guidate per scoprire le meravigliose
-                    sorgenti di Oasis e farvi ritrovare finalmente la pace
-                    perduta con Madre Natura
+                    Oasis inaugura il suo primo parco di divertimenti. Cerca una
+                    via di fuga per mente e corpo e lasciati trascinare dal
+                    divertimento.
                   </p>
                   <div><i class="bi-pin-angle-fill"></i> Via Cadens, 11</div>
                   <div>
-                    <i class="bi-watch"></i> Venerdì 17 novembre <br />8.00 -
+                    <i class="bi-watch"></i> Venerdì 30 gennaio <br />8.00 -
                     12.00
                   </div>
                   <button
@@ -155,7 +155,7 @@
                     data-bs-toggle="modal"
                     data-bs-target="#mymodal"
                   >
-                    Prenota
+                    PRENOTA
                   </button>
                 </div>
               </div>
@@ -170,19 +170,19 @@
                   />
                   <div class="card-img-overlay px-0">
                     <h3 class="card-title bg-primary-alpha p-3">
-                      Cinema d'autore
+                      Pattina con noi
                     </h3>
                   </div>
                 </div>
                 <div class="card-body d-flex flex-column text-dark">
                   <p class="card-text flex-grow-1">
-                    Film d’autore interamente auto prodotti dai nostri registi.
-                    Il tema della settimana è: la storia di Oasis, dalle origini
-                    all grande promessa per il futuro
+                    Per fuggire dai pensieri della vita quotidiana indossa i
+                    tuoi pattini e partecipa alla passeggiata panoramica tra le
+                    bellezze che Oasis ha da offrirti.
                   </p>
                   <div><i class="bi-pin-angle-fill"></i> Via Artem, 8</div>
                   <div>
-                    <i class="bi-watch"></i>Sabato 2 dicembre <br />17.00 -
+                    <i class="bi-watch"></i>Sabato 14 febbraio <br />17.00 -
                     19.00
                   </div>
                   <button
@@ -191,7 +191,7 @@
                     data-bs-toggle="modal"
                     data-bs-target="#mymodal"
                   >
-                    Prenota
+                    PRENOTA
                   </button>
                 </div>
               </div>
@@ -206,21 +206,21 @@
                   />
                   <div class="card-img-overlay px-0">
                     <h3 class="card-title bg-primary-alpha p-3">
-                      Preghiamo insieme
+                      Taglia e cuci
                     </h3>
                   </div>
                 </div>
                 <div class="card-body d-flex flex-column text-dark">
                   <p class="card-text flex-grow-1">
-                    Ogni settimana diamo ai nostri cittadini la possibilità di
-                    frequentare l’area dedicata al culto della Sorgente nel
-                    quartiere Burocrasis, per ritrovare la propria spiritualità
+                    Sei una casalinga che desidera solo fuggire dalla monotonia
+                    di tutti i giorni? Vieni con le tue amiche a rilassarti per
+                    un intero pomeriggio con il taglia e cuci.
                   </p>
                   <div>
                     <i class="bi-pin-angle-fill"></i> Piazza Simulacro, 3
                   </div>
                   <div>
-                    <i class="bi-watch"></i>Ogni domenica <br />6.00 - 00.00
+                    <i class="bi-watch"></i>Ogni mercoledì <br />14.00 - 17.00
                   </div>
                   <button
                     class="btn btn-primary mt-3"
@@ -228,7 +228,7 @@
                     data-bs-toggle="modal"
                     data-bs-target="#mymodal"
                   >
-                    Prenota
+                    PRENOTA
                   </button>
                 </div>
               </div>
@@ -243,20 +243,18 @@
                     class="card-img"
                   />
                   <div class="card-img-overlay px-0">
-                    <h3 class="card-title bg-primary-alpha p-3">
-                      Seminario fertilità
-                    </h3>
+                    <h3 class="card-title bg-primary-alpha p-3">Colorandia</h3>
                   </div>
                 </div>
                 <div class="card-body d-flex flex-column text-dark">
                   <p class="card-text flex-grow-1">
-                    È necessario fare figli in quest’epoca storica? Questo ciclo
-                    di conferenze organizzato dai nostri luminari della
-                    ginecologia ti convincerà che la risposta è sì
+                    Vieni con i tuoi bambini ogni sabato pomeriggio a divertiti
+                    facendo molti laboratori artistici. Tira fuori l’artista che
+                    c’è in te!
                   </p>
                   <div><i class="bi-pin-angle-fill"></i> Via Fetus, 69</div>
                   <div>
-                    <i class="bi-watch"></i> Ogni giovedì <br />16.30 - 18.30
+                    <i class="bi-watch"></i> Ogni sabato <br />15.30 - 18.30
                   </div>
                   <button
                     class="btn btn-primary mt-3"
@@ -264,7 +262,7 @@
                     data-bs-toggle="modal"
                     data-bs-target="#mymodal"
                   >
-                    Prenota
+                    PRENOTA
                   </button>
                 </div>
               </div>
@@ -298,7 +296,7 @@
               class="btn btn-primary"
               data-bs-dismiss="modal"
             >
-              Close
+              Chiudi
             </button>
           </div>
         </div>
