--- a/5-free_page.html
+++ b/5-free_page.html
@@ -110,7 +110,7 @@
         <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
           <h1 class="h2">La nostra storia</h1>
           <h2 class="lead">
-            Scopri la genesi dell’unica città che sopravviverà al tempo
+            Scopri come siamo diventati la città felice
           </h2>
         </div>
       </section>
@@ -133,10 +133,8 @@
             <div class="col-md-5">
               <h3 class="h2">Preludio</h3>
               <p>
-                Anno 2020, inizia la pandemia da
-                <strong>Covid-19</strong>. Mentre le attenzioni del mondo sono
-                rivolte alla gestione dei contagi, un piccolo gruppo di
-                scienziati fa una scoperta spaventosa. Il riscaldamento globale
+                E’ il 2020 e un piccolo gruppo di scenziati fa
+                una scoperta spaventosa. Il riscaldamento globale
                 sta accelerando e le previsioni si avvereranno in anticipo di
                 almeno dieci anni. Alcuni
                 <strong>imprenditori illuminati</strong>
@@ -164,18 +162,12 @@
               <h2 class="story-year">2030</h2>
             </div>
             <div class="col-md-5">
-              <h3 class="h2">Il progetto Oasis</h3>
+              <h3 class="h2">Nasce Oasis</h3>
               <p>
-                Le <strong>previsioni scientifiche</strong> sul riscaldamento
-                globale si avverano in anticipo. Le
-                <strong>temperature globali</strong> si alzano di tre gradi
-                centigradi e il surriscaldamento è irreversibile. Il processo di
-                desertificazione accelera ed è sempre più difficile produrre
-                cibo. Gruppi di persone migrano vicino alle poche fonti d'acqua
-                rimaste, causando non pochi conflitti - spesso anche armati. La
-                <strong>progettazione</strong> della città è completata, il sito
-                di costruzione è stato individuato in un oasi del Deserto
-                Occidentale. Iniziano i lavori di realizzazione di Oasis.
+                Nasce <strong>Oasis</strong>, una città in mezzo al Deserto Occidentale.
+                La sua posizione però è segreta per impedire che venga saccheggiata prima della catastrofe climatica, in quanto è l’unica città che si trova vicino ad una delle poche fonti d’acqua del pianeta.
+                Oasis è una piccola città inizialmente abitata dalle popolazioni vicine, ma è in crescita e governata da persone che non vedono l’ora di accogliere i futuri cittadini.
+
               </p>
             </div>
           </div>
@@ -198,14 +190,10 @@
               <h2 class="story-year">2040</h2>
             </div>
             <div class="col-md-5">
-              <h3 class="h2">Oasis prende forma</h3>
+              <h3 class="h2">Dopo la catastrofe</h3>
               <p>
-                Oasis è ultimata. In un mondo
-                <strong>devastato da guerre</strong> Oasis è uno dei pochi
-                luoghi al mondo dove regna la pace. C’è un periodo di
-                <strong>forte crescita economica</strong>, e durante questi anni
-                vengono costruite le strutture che porteranno alla nascita del
-                servizio benessere.
+                É il 2040 e il resto del mondo si desertifica a causa della catastrofe ambientale, che ha costretto tutti i cittadini ad emigrare nei luoghi più vicini alle poche fonti d’acqua rimaste.
+                É proprio quest’anno che il <strong>Signor Oasis</strong>, diventato sindaco, decide di trasformare la città, rendendola il più accogliente possibile per i cittadini che verrano a viverci.  Colorata e dall’aria felice, sembra il luogo più adatto per creare la nuova società del futuro.
               </p>
             </div>
           </div>
@@ -228,22 +216,20 @@
               <h2 class="story-year text-start">2050</h2>
             </div>
             <div class="col-md-5">
-              <h3 class="h2">Espansione</h3>
+              <h3 class="h2">Oasis oggi</h3>
               <p>
-                La crescita non dura però a lungo ed è necessario espandersi.
-                Una metropoli abbandonata a pochi chilometri di distanza sarà il
-                <strong>secondo nucleo di Oasis</strong>. Con un maggior numero
-                di residenze sarà più facile reclutare
-                <strong>nuovi cittadini</strong> che lavorino per far crescere
-                Oasis. Nasce il servizio formazione per plasmare le competenze
-                necessarie.
+                Sono passati dieci anni dalla catastrofe ambientale e Oasis è diventata una città serena, che ha dimenticato le paure del passato.
+                Viene chiamata dai suoi cittadini <strong>La Città Felice</strong>, tutti sono felici della nuova vita che Oasis offre loro. Nessuno vuole e può allontanarsi da questo luogo di pace e serenità, sembra essere in un sogno dal quale non ci si può proprio svegliare.
               </p>
             </div>
           </div>
         </div>
+        <br>
       </section>
 
       <section>
+        <div class="bg-light-gray">
+        <br>
         <div class="container pt-5">
           <div class="row flex-md-row align-items-md-center">
             <div class="col-md-5 text-center">
@@ -263,22 +249,21 @@
                 align-items-md-center
                 justify-content-between
                 -->
-              <h2 class="story-year text-start">Oggi</h2>
+              <h2 class="story-year text-start"> <br></h2>
             </div>
             <div class="col-md-5">
-              <h3 class="h2">Il sogno dei fondatori vive</h3>
+              <h3 class="h2">Il signor Oasis</h3>
               <p>
-                Negli anni l’amministrazione ha messo in piedi una
-                <strong>struttura organizzativa</strong> centralizzata per
-                coordinare i lavori e fatto costruire un quartier generale che è
-                anche la residenza del sindaco. I cittadini sono
-                <strong>felici</strong> e non immaginano una vita fuori da
-                Oasis.
+                Il Signor Oasis, la cui identità rimane ignota, ha un
+                cuore grande, grande come l’oasi di benessere che lui
+                stesso ha creato per il bene dell’umanità.Ha come obiettivo  far sentire in un sogno ad occhi aperti i suoi cittadini; un sogno bellissimo dal quale non vogliono e non possono più svegliarsi. La sua città è benefica, colorata e la cosa più importante è l’unica disponibile al momento. Solo cittadini prescelti, ubbedienti e che non creino caos e disordine possono essere realmente degni del benessere di questa città.
               </p>
             </div>
           </div>
         </div>
+      </div>
       </section>
+
     </main>
 
     <footer class="bg-secondary px-5">
