--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
         id="hero-home"
       >
         <div
-          class="hero-content bg-tertiary d-flex flex-column justify-content-center align-items-center text-light text-center"
+          class="hero-content d-flex flex-column justify-content-center align-items-center text-light text-center"
         >
           <h1 class="display-1">Oasis</h1>
-          <h2 class="lead">La culla del tuo futuro</h2>
+          <h2 class="lead">La sorgente della tua felciità</h2>
           <div>
             <a class="btn btn-primary mt-3" href="3-city_access.html"
               >Unisciti a noi
@@ -136,22 +136,20 @@
               />
             </div>
             <div class="col-md">
-              <h2 class="">Una nuova città</h2>
+              <h2 class="">Benvenuti in città</h2>
               <p class="">
-                Oasis nasce dopo la disfatta del mondo. L’uomo, avido e sempre
-                più desideroso di controllo, ha soffocato a poco a poco il
-                Pianeta Terra. Noi siamo qui per <strong>proteggerti</strong> e
-                prenderci cura di te. Il nostro obiettivo è farti dimenticare la
-                catastrofe che ha distrutto il mondo e farti vivere una nuova
-                vita di benessere fisico e mentale,
-                <strong>lontano dal Mondo Esterno</strong>.
+                Il nostro intento? Rubare tutti i <strong>colori</strong> del mondo per
+                ridipingere la tela della vostra vita, eliminando il grigio
+                delle paura e delle ansie.
+                Scegli tu dove vorrai abitare: nella rilassante Rigenesis,
+                nell’eccentrica Centrisis, o nella perfetta Burocrasis?
               </p>
               <div class="text-end">
                 <a
                   href="1-city_description.html"
                   class="small-caps link-secondary"
                 >
-                  Scopri Oasis
+                  Scopri i quartieri
                   <i class="bi-arrow-right fw-bold"></i>
                 </a>
               </div>
@@ -178,13 +176,12 @@
               <p class="">
                 Lo sapevi che Oasis è stata pensata più di
                 <strong>trent'anni fa</strong> da delle menti illuminate e
-                avveniristiche? Scopri insieme a noi come è nato l’ambizioso
-                progetto di <strong>salvare l’Umanità</strong> dal Mondo
-                Esterno.
+                avveniristiche?
+                Scopri insieme a noi come è nato il progetto Oasis.
               </p>
               <div class="d-flex justify-content-end">
                 <a href="5-free_page.html" class="small-caps link-secondary">
-                  Leggi la nostra storia
+                  Guarda la nostra storia
                   <i class="bi-arrow-right fw-bold"></i>
                 </a>
               </div>
@@ -215,10 +212,10 @@
             </div>
             <div class="col-lg-5">
               <div class="d-flex flex-column align-items-center">
-                <h2 class="align-self-md-start">Servizi unici al mondo</h2>
+                <h2 class="align-self-md-start">Perché Oasis?</h2>
                 <p class="align-self-md-start">
-                  Benessere e Formazione ecco perché dovresti sceglierci. Siamo
-                  l’unica città al mondo ad offrirteli
+                  Sappiamo già per quale motivo sceglierai Oasis.
+                  Perché ha dei servizi <strong>unici</strong> al mondo.
                 </p>
               </div>
 
@@ -226,7 +223,7 @@
                 <i class="bi-arrow-right fw-bold p-3"></i>
                 <div>
                   <h3 class="lead">Formazione</h3>
-                  <p>Sfoglia la nostra offerta di scuole</p>
+                  <p>Le migliori scuole del pianeta sono qui da noi.</p>
                 </div>
               </div>
 
@@ -234,7 +231,7 @@
                 <i class="bi-arrow-right fw-bold p-3"></i>
                 <div>
                   <h3 class="lead">Benessere</h3>
-                  <p>Esplora i nostri servizi termali e farmacologici</p>
+                  <p>Centri termali che non potrai trovare altrove.</p>
                 </div>
               </div>
 
@@ -242,7 +239,7 @@
                 class="d-flex justify-content-center justify-content-md-start"
               >
                 <a href="2-services_descriptions.html" class="btn btn-primary"
-                  >Scopri tutti i servizi</a
+                  >ESPLORA SERVIZI</a
                 >
               </div>
             </div>
@@ -253,7 +250,7 @@
       <!-- Eventi -->
       <section>
         <div class="container py-5">
-          <h2 class="text-center">I prossimi eventi</h2>
+          <h2 class="text-center">Eventi in programma</h2>
 
           <div class="row gy-3 py-5">
             <div class="col-md-4">
@@ -265,8 +262,8 @@
                     class="card-img"
                   />
                   <div class="card-img-overlay">
-                    <h3 class="card-title h4">Sorgente di vita</h3>
-                    <p class="card-text small">Venerdì 17 novembre</p>
+                    <h3 class="card-title h4">Inagurazione ruota panoramica</h3>
+                    <p class="card-text small">30 Gennaio</p>
                   </div>
                 </div>
               </div>
@@ -281,8 +278,8 @@
                     class="card-img"
                   />
                   <div class="card-img-overlay">
-                    <h3 class="card-title h4">Cinema d'autore</h3>
-                    <p class="card-text small">Sabato 2 dicembre</p>
+                    <h3 class="card-title h4">Pattina con noi</h3>
+                    <p class="card-text small">14 Febbraio</p>
                   </div>
                 </div>
               </div>
@@ -297,8 +294,8 @@
                     class="card-img"
                   />
                   <div class="card-img-overlay">
-                    <h3 class="card-title h4">Preghiamo insieme</h3>
-                    <p class="card-text small">Ogni domenica</p>
+                    <h3 class="card-title h4">Taglia e cuci</h3>
+                    <p class="card-text small">Tutti i mercoledì</p>
                   </div>
                 </div>
               </div>
@@ -317,10 +314,12 @@
       <section class="bg-primary">
         <div class="container py-5">
           <div class="d-flex flex-column align-items-center">
-            <h2 class="text-light">Entra in Oasis</h2>
-            <p class="text-light py-3">Cosa aspetti?</p>
+            <h2 class="text-light">Cosa aspetti?</h2>
+            <p class="text-light py-3">Entra a far parte della
+              comunità più felice della
+              Terra.</p>
             <a href="3-city_access.html" class="btn btn-primary">
-              Unisciti a noi
+              UNISCITI A NOI
             </a>
           </div>
         </div>
