--- a/2_1-service_description.html
+++ b/2_1-service_description.html
@@ -143,7 +143,7 @@
                 psicologico? Appena entrato in Oasis ti verrà assegnato uno
                 <strong>psicoterapeuta personale</strong> che seguirà e
                 monitorerà il tuo percorso psicologico costantemente con un
-                colloquio settimanale.
+                colloquio settimanale. Noi abbiamo a cuore il tuo benessere fisico e psicologico.Sei un nostro fedele cittadino e meriti il meglio.
               </p>
             </div>
           </div>
@@ -174,8 +174,8 @@
                 </div>
                 <h3>Trattamenti termali</h3>
                 <p>
-                  Un’oasi di benessere lontana dagli
-                  <strong>impegni quotidiani</strong> e in cui trascorrere ore
+                  Un’oasi di <strong>benessere</strong> lontana dagli
+                  impegni quotidiani e in cui trascorrere ore
                   di completo relax per dimenticare il mondo al di là della
                   cupola. Una volta assegnatoti questo trattamento, potrai
                   scegliere tra diversi pacchetti benessere: manicure, pedicure,
@@ -196,12 +196,12 @@
                 </div>
                 <h3>Trattamenti farmacologici</h3>
                 <p>
-                  Non c’è nulla che le nostre pillole <strong>Soma</strong> non
+                  Non c’è nulla che le nostre pillole non
                   possano aggiustare. I nostri medici si attiveranno subito per
                   capire quale prescriverti a seconda di dove è localizzato il
-                  tuo dolore. I nostri <strong>miracolosi medicinali</strong> ti
+                  tuo dolore. I nostri miracolosi medicinali ti
                   faranno dimenticare ogni dolore. Ritrova la connessione con il
-                  tuo corpo e sarai libero dalle catene del passato.
+                  tuo corpo e sarai <strong>libero</strong> dalle catene del passato.
                 </p>
               </div>
             </div>
@@ -209,7 +209,7 @@
         </div>
       </section>
 
-      <section class="bg-light-gray py-5">
+      <section class="bg-light-gray py-5 hand-faq">
         <div class="container p-5">
           <h2 class="text-center pb-4">FAQ</h2>
           <h3 class="pb-2">È a pagamento?</h3>
